--- a/HTML/FAQ/style.css
+++ b/HTML/FAQ/style.css
@@ -372,3 +372,66 @@ letter-spacing: 0px;
     letter-spacing: 0px;
     opacity: 1;
 }
+.menu-btn{
+    color: white;
+    display: none;
+}
+#click{
+    display: none;
+}
+
+/* Responsive CSS */
+
+@media (max-width:900px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 70vh;
+        top: 60px;
+        left: -100%;
+        background: #525252;
+        text-align: center;
+    } 
+    nav ul li{
+        display: block;
+        margin-left: 15px;
+        padding: 10px;
+    }
+    #click:checked ~ ul{
+        left:0%;
+    }
+    
+    .menu-btn{
+        color: white;
+        display: block;
+        font-size: 30px;
+        margin-right: 150px;
+        cursor: pointer;
+    }
+    .footer .save{
+        text-align: center;
+        margin-left: 700px;
+        margin-top: 30px;
+    }   
+}	
+
+@media (max-width:510px){
+    .end{
+        height: 250px;
+    }
+    .banner{
+        height: 450px;
+    }
+}
+@media (max-width:465px){
+    .banner{
+        height: 475px;
+    }
+    .heading .demo{
+       height: 900px;
+    }
+}
