--- a/HTML/Prices/style.css
+++ b/HTML/Prices/style.css
@@ -752,3 +752,40 @@ letter-spacing: 0px;
     letter-spacing: 0px;
     opacity: 1;
 }
+
+.menu-btn{
+    color: white;
+    display: none;
+}
+#click{
+    display: none;
+}
+
+
+@media (max-width:900px) {
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 70vh;
+        top: 60px;
+        left: -100%;
+        background: #525252;
+        text-align: center;
+    } 
+    nav ul li{
+        display: block;
+        margin-left: 15px;
+        padding: 10px;
+    }
+    #click:checked ~ ul{
+        left:0%;
+    }
+    
+    .menu-btn{
+        color: white;
+        display: block;
+        font-size: 30px;
+        margin-right: 150px;
+        cursor: pointer;
+    }
+}
