--- a/HTML/Contact/style.css
+++ b/HTML/Contact/style.css
@@ -465,3 +465,92 @@ hr{
     letter-spacing: 0px;
     opacity: 1;
 }
+.menu-btn{
+    color: white;
+    display: none;
+}
+#click{
+    display: none;
+}
+
+
+/* Responsive CSS */
+
+@media (max-width:900px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 70vh;
+        top: 60px;
+        left: -100%;
+        background: #525252;
+        text-align: center;
+    } 
+    nav ul li{
+        display: block;
+        margin-left: 15px;
+        padding: 10px;
+    }
+    #click:checked ~ ul{
+        left:0%;
+    }
+    
+    .menu-btn{
+        color: white;
+        display: block;
+        font-size: 30px;
+        margin-right: 150px;
+        cursor: pointer;
+    }
+     .row .line-1,
+	 .row .line-2,
+	 .row .logo{
+		 display:none;
+	 }
+	 
+
+
+    .touch form {
+        display: inline;
+    }
+    .touch #lname{
+        margin-left: 474px;
+        width: 614px;
+    }
+    .touch #email{
+        margin-left: 474px;
+        width: 614px;
+    }
+    .touch #fname,
+    .touch #mobile{
+        width: 614px;
+    }
+    .footer .save{
+        text-align: center;
+        margin-left: 700px;
+        margin-top: 30px;
+    }   
+}
+@media (max-width:440px){
+    .footer{
+        margin-bottom: 150px;
+    }
+    .touch,.banner,
+    .contact{
+        margin-bottom: 75px;
+    }
+    .end{
+        /* height: 660px; */
+        height: 200px;
+    }
+    .footer .save{
+        text-align: center;
+        margin-left: 700px;
+        margin-top: 40px;
+    }   
+}
+
