--- a/PHP/assests/css/sp_rating.css
+++ b/PHP/assests/css/sp_rating.css
@@ -103,7 +103,7 @@ li{
 }
 
 /* Table CSS */
-.row .card{
+.row #card{
     margin-top: 30px;
     height: 712px;
     background-color: #1D7A8C;
@@ -123,19 +123,10 @@ li{
     background: #146371;
     width: 100%;
 }
+.comment a{
+    text-decoration: none;
+}
 
-.row .table{
-        margin-top: 30px;
-        font-size: 13px;
-        border: 2px solid #F9F9F9;
-}
-.row .table tr td button{
-    border-radius: 20px;
-}
-.row .table thead{
-    background: #F9F9F9;
-    color: #646464;
-}
 .drop{
     margin-left: 1350px !important;
 }
